# news-monitoring

./: .gitignore  main.py  pyproject.toml  readme.md  streamlit_app.py
src/news_monitoring/: __init__.py  cluster_processor.py  excel_exporter.py  keyword_filter.py  message_processor.py  news_loader.py  news_monitoring_factory.py  news_processor.py  notifier.py  streamlit_notifier.py  types.py
