[tool.poetry]
name = "news-monitoring"
version = "0.1.0"
description = ""
authors = ["Ivan Reshetnikov <resivalex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
pandas = "^2.2.2"
transformers = "^4.44.0"
torch = "^2.4.0"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
